overlays/leaf-j0li/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaf
spec:
  template:
    spec:
      volumes:
      - name: database
        hostPath:
          path: /storage/kubernetes/leaf/j0li
          type: Directory
      - name: decks
        hostPath:
          path: /storage/kubernetes/leaf/japanese
          type: Directory
