overlays/leaf-j0li/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: leaf
spec:
  rules:
  - host: leaf.j0li.me
    http:
      paths:
      - path: /
        backend:
          serviceName: leaf-j0li
          servicePort: 8000
